Fix footer on mobile

--- a/app/scss/footer/footer.scss
+++ b/app/scss/footer/footer.scss
@@ -4,10 +4,12 @@
         background: #303030;
         >div{
             display: flex;
+            flex-direction: column;
         }
         .logo__section, .info__section{
-            padding: 50px 30px;
+            padding: 30px 15px;
             display: flex;
+            flex-direction: column;
         }
         .logo__section{
             flex-grow: 1;
@@ -19,10 +21,8 @@
             }
         }
         .info__section{
-            flex-grow: 5;
             &--item{
-                max-width: 200px;
-                padding: 0 70px;
+                max-width: 100%;
                 h3, p{
                     color:#6b6b6b;
                 }
@@ -65,4 +65,8 @@
             }
         }
     }
+}
+
+@media (min-width: 750px) {
+    @import "types_desktop/footer";
 }
