--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -886,12 +886,20 @@
     .main__footer--info > div {
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
     .main__footer--info .logo__section, .main__footer--info .info__section {
-      padding: 50px 30px;
+      padding: 30px 15px;
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
     .main__footer--info .logo__section {
       -webkit-box-flex: 1;
           -ms-flex-positive: 1;
@@ -904,39 +912,34 @@
                 filter: grayscale(100%);
         max-width: 130px;
         height: auto; }
-    .main__footer--info .info__section {
-      -webkit-box-flex: 5;
-          -ms-flex-positive: 5;
-              flex-grow: 5; }
-      .main__footer--info .info__section--item {
-        max-width: 200px;
-        padding: 0 70px; }
-        .main__footer--info .info__section--item h3, .main__footer--info .info__section--item p {
-          color: #6b6b6b; }
-        .main__footer--info .info__section--item p {
-          padding: 10px 0; }
-        .main__footer--info .info__section--item .input_group {
-          position: relative;
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-align: center;
-              -ms-flex-align: center;
-                  align-items: center; }
-          .main__footer--info .info__section--item .input_group input {
-            background: transparent;
-            border-radius: 18px;
-            border: 1px solid #575757;
-            font-size: 13px;
-            padding: 10px 40px 10px 10px;
-            width: 100%;
-            color: #4a4a4a; }
-          .main__footer--info .info__section--item .input_group button {
-            position: absolute;
-            border: 0;
-            right: 20px;
-            color: #696969;
-            background: transparent; }
+    .main__footer--info .info__section--item {
+      max-width: 100%; }
+      .main__footer--info .info__section--item h3, .main__footer--info .info__section--item p {
+        color: #6b6b6b; }
+      .main__footer--info .info__section--item p {
+        padding: 10px 0; }
+      .main__footer--info .info__section--item .input_group {
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .main__footer--info .info__section--item .input_group input {
+          background: transparent;
+          border-radius: 18px;
+          border: 1px solid #575757;
+          font-size: 13px;
+          padding: 10px 40px 10px 10px;
+          width: 100%;
+          color: #4a4a4a; }
+        .main__footer--info .info__section--item .input_group button {
+          position: absolute;
+          border: 0;
+          right: 20px;
+          color: #696969;
+          background: transparent; }
   .main__footer--copyright {
     background: #1c1c1c;
     color: #666666;
@@ -946,6 +949,26 @@
       color: #666666; }
       .main__footer--copyright a:hover {
         text-decoration: underline; }
+
+@media (min-width: 750px) {
+  .main__footer--info > div {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .main__footer--info .logo__section, .main__footer--info .info__section {
+    padding: 50px 30px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .main__footer--info .info__section {
+    -webkit-box-flex: 5;
+        -ms-flex-positive: 5;
+            flex-grow: 5; }
+    .main__footer--info .info__section--item {
+      max-width: 200px;
+      padding: 0 70px; } }
 
 body, html {
   overflow-x: hidden; }
